# speech-essence

./: .gitignore  .gitmodules  Cargo.toml  INSTALL_PREREQUISITES.sh  LICENSE  README.md
src/: main.rs  mp3_stt.rs  opus_stt.rs  wav_stt.rs
