[package]
name = "speech-essence"
version = "0.1.0"
authors = ["Egor Markov <emarkov@notanotherone.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vosk = { path = "./vosk-rs" }
riff-wave = "0.1.2"
structopt = "0.3.21"
scan_dir = "0.3.3"